--- a/images/frappe/Dockerfile
+++ b/images/frappe/Dockerfile
@@ -2,6 +2,9 @@ ARG PYTHON_VERSION=3.11.6
 ARG DEBIAN_BASE=bookworm
 FROM python:${PYTHON_VERSION}-slim-${DEBIAN_BASE} AS base
 
+COPY resources/nginx-template.conf /templates/nginx/frappe.conf.template
+COPY resources/nginx-entrypoint.sh /usr/local/bin/nginx-entrypoint.sh
+
 ARG WKHTMLTOPDF_VERSION=0.12.6.1-3
 ARG WKHTMLTOPDF_DISTRO=bookworm
 ARG NODE_VERSION=20.19.2
@@ -81,18 +84,27 @@ RUN apt-get update \
     libbz2-dev \
     && rm -rf /var/lib/apt/lists/*
 
+ARG APPS_JSON_BASE64
+RUN if [ -n "${APPS_JSON_BASE64}" ]; then \
+    mkdir /opt/frappe && echo "${APPS_JSON_BASE64}" | base64 -d > /opt/frappe/apps.json; \
+  fi
+
 USER frappe
 
-FROM build AS builder
-
-ARG FRAPPE_BRANCH=develop
+ARG FRAPPE_BRANCH=version-15
 ARG FRAPPE_PATH=https://github.com/frappe/frappe
-RUN bench init \
-  --frappe-branch=${FRAPPE_BRANCH} \
-  --frappe-path=${FRAPPE_PATH} \
-  --skip-redis-config-generation \
-  --verbose \
-  /home/frappe/frappe-bench && \
+RUN export APP_INSTALL_ARGS="" && \
+  if [ -n "${APPS_JSON_BASE64}" ]; then \
+    export APP_INSTALL_ARGS="--apps_path=/opt/frappe/apps.json"; \
+  fi && \
+  bench init ${APP_INSTALL_ARGS}\
+    --frappe-branch=${FRAPPE_BRANCH} \
+    --frappe-path=${FRAPPE_PATH} \
+    --no-procfile \
+    --no-backups \
+    --skip-redis-config-generation \
+    --verbose \
+    /home/frappe/frappe-bench && \
   cd /home/frappe/frappe-bench && \
   echo "{}" > sites/common_site_config.json && \
   find apps -mindepth 1 -path "*/.git" | xargs rm -fr
@@ -104,3 +116,22 @@ USER frappe
 COPY --from=builder --chown=frappe:frappe /home/frappe/frappe-bench /home/frappe/frappe-bench
 
 WORKDIR /home/frappe/frappe-bench
+
+VOLUME [ 
+  "/home/frappe/frappe-bench/sites", 
+  "/home/frappe/frappe-bench/sites/assets", 
+  "/home/frappe/frappe-bench/logs" 
+]
+
+CMD [
+  "/home/frappe/frappe-bench/env/bin/gunicorn", 
+  "--chdir=/home/frappe/frappe-bench/sites", 
+  "--bind=0.0.0.0:8000", 
+  "--threads=4", 
+  "--workers=2", 
+  "--worker-class=gthread", 
+  "--worker-tmp-dir=/dev/shm", 
+  "--timeout=120", 
+  "--preload", 
+  "frappe.app:application" 
+]
