--- a/images/frappe/Dockerfile
+++ b/images/frappe/Dockerfile
@@ -117,21 +117,22 @@ COPY --from=builder --chown=frappe:frappe /home/frappe/frappe-bench /home/frappe
 
 WORKDIR /home/frappe/frappe-bench
 
-VOLUME [ 
-  "/home/frappe/frappe-bench/sites", 
-  "/home/frappe/frappe-bench/sites/assets", 
-  "/home/frappe/frappe-bench/logs" 
+VOLUME [ \
+  "/home/frappe/frappe-bench/apps", \
+  "/home/frappe/frappe-bench/sites", \
+  "/home/frappe/frappe-bench/sites/assets", \
+  "/home/frappe/frappe-bench/logs" \
 ]
 
-CMD [
-  "/home/frappe/frappe-bench/env/bin/gunicorn", 
-  "--chdir=/home/frappe/frappe-bench/sites", 
-  "--bind=0.0.0.0:8000", 
-  "--threads=4", 
-  "--workers=2", 
-  "--worker-class=gthread", 
-  "--worker-tmp-dir=/dev/shm", 
-  "--timeout=120", 
-  "--preload", 
-  "frappe.app:application" 
+CMD [ \
+  "/home/frappe/frappe-bench/env/bin/gunicorn", \
+  "--chdir=/home/frappe/frappe-bench/sites", \
+  "--bind=0.0.0.0:8000", \
+  "--threads=4", \
+  "--workers=2", \
+  "--worker-class=gthread", \
+  "--worker-tmp-dir=/dev/shm", \
+  "--timeout=120", \
+  "--preload", \
+  "frappe.app:application" \
 ]
